<resources>
    <string name="app_name">The Best of the Best</string>
    <string name="title_home">List</string>
    <string name="title_dashboard">Images</string>
    <string name="title_notifications">Map</string>
    <string name="add_images">Add Images</string>
    <string name="name_holder">Name</string>
    <string name="desc_holder">Description</string>
    <string name="name_hint">Put name here. </string>
    <string name="desc_hint">Put descriptions here. </string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="memo">Memo</string>

    <string name="query_default">Put name to search. </string>
    <string name="image_header">Memory of the taste</string>
    <string name="if_query">Search:&#160;</string>
</resources>